# subject_screener

./: .gitignore  Instructions.txt  Module_sub_process_build.ipynb  pyproject.toml  screener.py
airflow/: dags.py  dags_support.py  process.txt
file_store_search/: news_data_palestine_1697589162.csv
file_store_search/processed/dataframes/: compiled_data.csv  data_acc.csv  economic predictions 2024_169.csv  predictions 2024_169.csv
file_store_search/processed/jsons/: sorted_entities_da.json  sorted_entities_data_acc.json  sorted_entities_economic predictions 2024_169.json  sorted_entities_elecciones argentina 2023_169.json  (+1 more)
file_store_search/raw/: compiled_data.csv  news_data_Cosmos_1697590124.csv  news_data_IBM_1697588934.csv  news_data_Israel_1697595469.csv  news_data_palestine_1697589162.csv  news_data_third world war_16979.csv  news_data_war_1697639901.csv  newsfeed_economic predictions 2024_16980.csv  newsfeed_elecciones argentina 2023_16979.csv  newsfeed_generative ai_16979.csv  newsfeed_predictions 2024_16979.csv  newsfeed_supply chain war_16980.csv
sub_display/: pyproject.toml
sub_display/sub_display/: deprecated_momentarily.py  sub_display.py
sub_interact/: pyproject.toml
sub_interact/sub_interact/: sub_interact.py
sub_process/: pyproject.toml
sub_process/sub_process/: israel_output.txt  processed news  sorted_entities.json  sub_process.py  sub_process_accumulate.py  sub_process_lintscore.txt  sub_process_save.py
sub_search/: pyproject.toml
sub_search/sub_search/: sub_search.py  sub_search_accumulate.py  sub_search_lintscore.txt  topics.txt
sub_search/sub_search/file_store_search/: news_data.csv  news_data_war_1697639901.csv
(+15 files in other folders)
