[tool.poetry]
name = "subject-screener"
version = "1.0.0"
description = "App for project"
authors = ["SRL"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.5"
transformers = "^4.34.0"
apache-airflow = "^2.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
